right stuff details

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     </table>
     </div>
     <div id="message">Location saved</div>
-
-    <div id='right'>
-      TABLE INFORMATION
-    </div>
+	
+	<div id='info'>
+		<h1>SAMPLE NAME</h1>
+		<h2>0/5</h2>
+		<p>It's a boy!</p>
+	</div>
 
     <script type='text/javascript' src='js/javascript.js'></script>
     <script async defer
