--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
     <div id="message">Location saved</div>
 	
 	<div id='info'>
-		<h1>SAMPLE NAME</h1>
+		<h1 id='info-name'>SAMPLE NAME</h1>
 		<h2>0/5</h2>
 		<p>It's a boy!</p>
 	</div>
 
     <script type='text/javascript' src='js/javascript.js'></script>
+	<script type='text/javascript'>
+		document.getElementById('info-name').innerHTML = "NEW SAMPLE NAME BOOYA";
+	</script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB87_4rBxFWAxJQT-NQDAYyf-GJeA3ur7M&callback=initMap">
     </script>
