CSS/Logo/Placeholders
Tweaked css, added a logo, and put in image placeholder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Skate Spots</title>
 </head>
 <body>
+
+    <div id="logo"> <img src="images/logo/logofinal.png" alt="Skate Spots"  width="275"></div>
+
     <div id="map"></div>
     <div id="form">
     <table>
@@ -27,15 +30,20 @@
         <option value='park'>Park</option>
         <option value='lot'>Lot</option>
         </select> </td></tr>
+        <tr><td>Upload (placeholder)</td> <td><input type='text' id='upload'/> </td> </tr>
         <tr><td></td><td><input type='button' value='Save' onclick='saveData()'/></td></tr>
     </table>
     </div>
-    <div id="message">Location saved</div>
+    <div id="message">Location Saved</div>
+
+
 
 	<div id='info'>
-		<h1 id='info-name'>Name: SAMPLE NAME</h1>
-		<h2 id= 'info-rating'>Rating: 0/5</h2>
-		<p id='info-type'>Type:</p>
+		<h1 id='info-name'> SAMPLE NAME (Stood) </h1>
+		<h2 id= 'info-rating'> 0/5 Stars </h2>
+		<h2 id='info-type'>Sample Type (Ledge) </h2>
+    <br>
+    <img id="image" src="images/test.png" alt="placeholder"  height="250" width="250">
 	</div>
 
     <script type='text/javascript' src='js/javascript.js'></script>
