--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <div id="logo"> <img src="images/logo/logofinal.png" alt="Skate Spots"  width="275"></div>
+    <div id="logo"> <img src="images/logo/logoV1.png" alt="Skate Spots"  width="275"></div>
 
     <div id="map"></div>
     <div id="form">
